-- ircd-hybrid-8rc1 Release Notes
o) Removed general::client_flood configuration option and added the
   new 'recvq' configuration directive to class{} blocks.
   The max size of a receive queue can be seen in "STATS Y"
   for each class


-- ircd-hybrid-8beta3 Release Notes
o) Fixed wrong syntax of several language files
o) &localchannels have been removed
o) /messaging opers@some.server is no longer supported
o) Fixed bug that would possibly lead to a topic desynchronization
o) Removed serverhide::disable_hidden configuration option
o) Dropped ircd-hybrid-6 GLINE compatibility mode
o) use_invex, use_except and use_knock configuration options
   have been removed. These features are now enabled by default


-- ircd-hybrid-8beta2 Release Notes
o) channel::disable_fake_channels now also disables ascii 29 (mIRC italic)
   when set to yes
o) Added channel::max_chans_per_oper configuration directive. The old way
   was to let ircops join three times the amount of max_chans_per_user
o) Replaced MODLOAD, MODUNLOAD, MODRELOAD, MODLIST and MODRESTART commands
   with the new MODULE command which can be fed with the LOAD, UNLOAD, RELOAD
   and LIST parameters.
   MODRESTART has been entirely removed. Use "MODULE RELOAD *" to reload all modules
o) Added back server notice when a client tries to obtain a reserved nick name
o) Removed OMOTD module
o) Added 'set' to operator privilege flags. Gives access to the "SET" command
o) Improved TS6 support


-- ircd-hybrid-8beta1 Release Notes
o) Implemented full services support. Among other things, the following changes
   have been done for this:
   - Added SVSNICK, and SVSMODE command handlers
   - Added service stamps to NICK/UID messages
   - Added SVS to server capabilities (CAPAB). SVS capable servers can
     deal with extended NICK/UID messages that contain service IDs/stamps.
   - Usermode +r (registered nick) has been added, as well as
     channelmode +r (registered channel)