@@ -56,8 +56,7 @@ serverinfo {
 	sid = "_CHANGE_ME_";
 
 	/*
-	 * description: the description of the server.  '[' and ']' may not
-	 * be used here for compatibility with older servers.
+	 * description: the description of the server.
 	 */
 	description = "hybrid-7 test server";
 
